<resources>
    <string name="app_name">Contacts</string>
    <string name="label_phone_number">Phone number:</string>
    <string name="label_email">E-mail:</string>
    <string name="button_back">back</string>
    <string name="button_edit">edit</string>
    <string name="button_delete">delete</string>
    <string name="tools_text">some text</string>
    <string name="tools_number">88000000000</string>
    <string name="first_name">First name:</string>
    <string name="last_name">Last name:</string>
    <string name="button_cancel">cancel</string>
    <string name="button_save">save</string>
    <string name="button_call">call</string>
    <string name="button_send_sms">send sms</string>
    <string name="btn_add_description">add contact</string>
</resources>