<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:fillViewport="true"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_label_first_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/first_name"
            app:layout_constraintVertical_bias="0.25"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="@id/gl_start"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <TextView
            android:id="@+id/tv_label_last_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/last_name"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@id/tv_label_first_name"
            app:layout_constraintStart_toStartOf="@id/gl_start"/>

        <TextView
            android:id="@+id/tv_label_phone_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_phone_number"
            android:layout_marginTop="60dp"
            app:layout_constraintTop_toBottomOf="@id/tv_label_last_name"
            app:layout_constraintStart_toStartOf="@id/gl_start"/>

        <TextView
            android:id="@+id/tv_label_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_email"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@id/tv_label_phone_number"
            app:layout_constraintStart_toStartOf="@id/gl_start"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="16dp"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="16dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>