<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:fillViewport="true"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_full_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tools:text="@string/tools_text"
            style="@style/full_name"
            android:gravity="center"
            app:layout_constraintVertical_bias="0.2"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="@id/gl_start"
            app:layout_constraintEnd_toEndOf="@id/gl_end"
            app:layout_constraintBottom_toBottomOf="parent" />

        <TextView
            android:id="@+id/tv_show_phone_number"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tools:text="@string/tools_text"
            style="@style/number_and_email"
            android:layout_marginStart="16dp"
            app:layout_constrainedWidth="true"
            app:layout_constraintBaseline_toBaselineOf="@id/tv_label_phone_number"
            app:layout_constraintStart_toEndOf="@id/tv_label_phone_number"
            app:layout_constraintEnd_toStartOf="@id/gl_end"/>

        <TextView
            android:id="@+id/tv_show_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tools:text="@string/tools_text"
            style="@style/number_and_email"
            android:layout_marginStart="16dp"
            app:layout_constraintBaseline_toBaselineOf="@id/tv_label_email"
            app:layout_constraintStart_toEndOf="@id/tv_label_email"
            app:layout_constraintEnd_toStartOf="@id/gl_end"/>

        <TextView
            android:id="@+id/tv_label_phone_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_phone_number"
            android:layout_marginTop="60dp"
            app:layout_constraintTop_toBottomOf="@id/tv_full_name"
            app:layout_constraintStart_toStartOf="@id/gl_start"/>

        <TextView
            android:id="@+id/tv_label_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_email"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@id/tv_show_phone_number"
            app:layout_constraintStart_toStartOf="@id/gl_start"/>

        <Button
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_back"
            app:layout_constraintTop_toBottomOf="@id/tv_show_email"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@id/gl_start"
            app:layout_constraintEnd_toStartOf="@id/btn_edit"/>

        <Button
            android:id="@+id/btn_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_edit"
            app:layout_constraintTop_toBottomOf="@id/tv_show_email"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/btn_back"
            app:layout_constraintEnd_toStartOf="@id/btn_delete"/>

        <Button
            android:id="@+id/btn_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_delete"
            app:layout_constraintTop_toBottomOf="@id/tv_show_email"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/btn_edit"
            app:layout_constraintEnd_toStartOf="@id/gl_end"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="16dp"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="16dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>